--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,28 @@
   box-sizing: border-box;
 }
 
+h1 {
+  color: #426696;
+  font-weight: 600;
+  font-size: 3rem;
+  opacity: 0.8;
+}
+
+h2,
+p {
+  color: #658ec6;
+  font-weight: 500;
+  opacity: 0.8;
+}
+
+h3 {
+  color: #426696;
+  font-weight: 600;
+  opacity: 0.8;
+}
+
 main {
+  font-family: "Poppins", sans-serif;
   min-height: 100vh;
   background: linear-gradient(to right top, #65dfc9, #6cdbeb);
   display: flex;
@@ -24,6 +45,7 @@ main {
   border-radius: 2rem;
   z-index: 2;
   backdrop-filter: blur(2rem);
+  display: flex;
 }
 
 .circle1,
@@ -49,3 +71,62 @@ main {
   bottom: 5%;
   left: 10%;
 }
+
+.dashboard {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  background: linear-gradient(
+    to right bottom,
+    rgba(255, 255, 255, 0.7),
+    rgba(255, 255, 255, 0.3)
+  );
+  border-radius: 2rem;
+}
+
+.link {
+  display: flex;
+  margin: 1.5rem 0rem;
+  padding: 1rem 5rem;
+  align-items: center;
+}
+
+.link h2 {
+  padding: 0rem 2rem;
+}
+
+.projects {
+  flex: 2;
+}
+
+.filler a {
+  text-decoration: none;
+  color: whitesmoke;
+  background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+  border-radius: 2rem;
+  padding: 1rem;
+  backdrop-filter: blur(2rem);
+  position: flex;
+  font-size: 85%;
+  font-weight: 600;
+}
+
+.filler a:hover {
+  background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+  border-radius: 1rem;
+  color: white;
+  padding: 1rem;
+  text-decoration: underline;
+  backdrop-filter: blur(2rem);
+  position: flex;
+  font-size: 85%;
+}
+
+.filler a:active {
+  background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+}
+
+/* GAMES */
