--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ main {
 .progress {
   background: linear-gradient(to right top, #65dfc9, #6cdbeb);
   width: 100%;
-  height: 25%;
+  height: 1.5rem;
   border-radius: 1rem;
   position: relative;
   overflow: hidden;
@@ -170,11 +170,11 @@ main {
   height: 100%;
   background: rgb(236, 236, 236);
   position: absolute;
-  left: 05%;
+  left: 5%;
 }
 
 .card-info {
   display: flex;
-  flex-direction: column;
+  flex-direction: column; /* This gives me the bar back which I assume is what is pushing it out (if I remove it)*/
   justify-content: space-between;
 }
